# geo_picture

./: README.md  index.html  main.py  pyproject.toml
.trae/documents/: 修复图片预览和地图显示问题.md  前端界面全面优化美化计划.md  实现图片GPS信息添加工具.md  实现批量添加GPS信息功能.md
frontend/: index.html  index.js
geo_picture/: __init__.py  geo_processor.py
