[project]
name = "geo-picture"
version = "0.1.0"
description = "图片GPS信息添加工具"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pywebview>=6.1",
    "pillow>=10.0.0",
    "pillow_heif>=0.14.0",
    "exifread>=3.0.0",
    "piexif>=1.1.3",
    "requests>=2.32.5",
    "python-dotenv>=1.2.1",
    "nuitka>=2.8.8",
]

[tool.setuptools]
packages = ["geo_picture"]
